--- a/public/home.ejs
+++ b/public/home.ejs
@@ -202,7 +202,7 @@
     <div class="intro">
       <h1 align="center">Acropolis Institute of Technology & Research</h1>
       <p>Campus Placement Management System</p>
-	<a href="login.html">Login</a>
+	<a href="login">Login</a>
     </div>
     <div class="about-me">
       <div class="about-me-text">
