--- a/public/admin.ejs
+++ b/public/admin.ejs
@@ -32,7 +32,7 @@
                             <i class="icon-home"></i> Show Students </a>
                     </li>
                     <li>
-                        <a href="create-student.ejs">
+                        <a href="/create-student">
                             <i class="icon-settings"></i> Create a new user </a>
                     </li>
                     <li>
