--- a/public/home.css
+++ b/public/home.css
@@ -98,7 +98,9 @@
         text-decoration: none
     }
     
-    @media (max-width: 600px) {
+    @media (max-width: 600px) 
+    {
         .main {
             border-radius: 0px;
         }
+    }
